--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,7 @@
       href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="../styles/style_login.css">
     <title>LOGIN</title>
   </head>
 
@@ -21,6 +22,7 @@
             <a href="../index.html">Home</a>
             
           </li>
+        
           <li>
             <a href="./signUp.html">Sign Up</a>
           </li>
