Pagina Completada con estilos

--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png"
         type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/style_signup.css">
     <title>LOGIN</title>
 </head>
 
@@ -82,10 +83,11 @@
                 </div>
             </fieldset>
         </form>
-        <figure>
+        
+    </main>
+    ñ<figure>
             <img src="../images/otono_balon.jpg" alt="Otoño Balon" width="100%">
         </figure>
-    </main>
     <br>
     <hr>
     
